Adds index invoice method
